<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtTareaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/nueva_tarea"/>

    <EditText
        android:id="@+id/edtTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/la_tarea"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/la_fecha"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:clickable="true"
        android:inputType="date"
        android:focusable="false"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_tarea"
        android:background="@color/colorAccent"
        android:textColor="@color/cardview_light_background"
        android:layout_margin="5dp"
        android:onClick="agregarTarea"
        android:textStyle="bold"
        android:textSize="20sp"/>

</LinearLayout>