<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.electiva.kellyhuber.listadetareas.fragments.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_usuario_hint"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/size_edit_text"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_password_hint"
                android:inputType="textPassword"
                android:textSize="@dimen/size_edit_text"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            android:onClick="ingresar"/>

        <TextView
            android:id="@+id/txtRecuperarPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtLink_recup_pass"
            android:textSize="@dimen/size_edit_text"
            android:clickable="true"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textAlignment="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtRegistrate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_link_registrarse"
        android:textSize="@dimen/size_edit_text"
        android:clickable="true"
        android:textAlignment="center"/>

</LinearLayout>
